2011-09-14  Chong Yidong  <cyd@stupidchicken.com>

	* replace.el (occur-mode-goto-occurrence): Don't force using other
	window (Bug#9499).

	* dired-aux.el (dired-do-chmod): Don't provide initial input.

2011-09-14  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-window): Remove.
	(display-buffer-record-window): Use help-setup window parameter
	instead of variable display-buffer-window.
	(display-buffer-function, special-display-buffer-names)
	(special-display-function): Mention help-setup parameter instead
	of display-buffer-window in doc-string.
	* help.el (help-window-setup): New argument help-window.  Use
	help-window-setup parameter instead of display-buffer-window.
	Reword some messages.
	(with-help-window): Pass window used for displaying the buffer
	to help-window-setup.  Don't set display-buffer-window.

2011-09-13  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/debug.el (debugger-make-xrefs):
	Preserve point.  (Bug#9462)

2011-09-13  Chong Yidong  <cyd@stupidchicken.com>

	* window.el (window-deletable-p): Use next-frame.

2011-09-13  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-auto-delete): Remove.
	(window-deletable-p): Remove argument FORCE.  Don't deal with
	dedicatedness and previous buffers.
	(switch-to-prev-buffer): Don't delete window.
	(delete-windows-on): Delete a window's frame if and only if the
	window is dedicated.
	(replace-buffer-in-windows): Delete buffer's window or frame if
	and only if window is dedicated.
	(quit-window): Handle quit-restore as before last change.
	(bury-buffer): Delete window only if window-deletable-p returns t.

2011-09-13  Chong Yidong  <cyd@stupidchicken.com>

	* window.el (window-deletable-p): Never delete the last frame on a
	given terminal.

2011-09-13  Glenn Morris  <rgm@gnu.org>

	* help.el (describe-key-briefly): Copy previous standard-output change.

2011-09-13  PJ Weisberg  <pj@irregularexpressions.net>  (tiny change)
