@@ -1,3 +1,11 @@
+2011-09-14  Juri Linkov  <juri@jurta.org>
+
+	* isearch.el (isearch-fail-pos): Add new arg `msg'.  Doc fix.
+	(isearch-edit-string): Use length of `isearch-string' when
+	`isearch-fail-pos' returns nil.
+	(isearch-message): Remove duplicate code and call
+	`isearch-fail-pos' with arg `t'.
+
 2011-09-14  Chong Yidong  <cyd@stupidchicken.com>
 
 	* replace.el (occur-mode-goto-occurrence): Don't force using other
